--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
     <div class="templatemo-sidebar">
         <header class="templatemo-site-header">
             <div class="square"></div>
-            <h1>Visual Admin</h1>
+            <h1>Plant Management</h1>
         </header>
         <div class="profile-photo-container">
             <img src="images/profile-photo.jpg" alt="Profile Photo" class="img-responsive">
@@ -53,10 +53,6 @@
                 <li><a href="index.html" class="active"><i class="fa fa-home fa-fw"></i>植物管理</a></li>
                 <li><a href="plantType.html"><i class="fa fa-bar-chart fa-fw"></i>种类管理</a></li>
                 <li><a href="schemeList.html"><i class="fa fa-database fa-fw"></i>报表管理</a></li>
-                <li><a href="maps.html"><i class="fa fa-map-marker fa-fw"></i>Maps</a></li>
-                <li><a href="manage-users.html"><i class="fa fa-users fa-fw"></i>Manage Users</a></li>
-                <li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>
-                <li><a href="login.html"><i class="fa fa-eject fa-fw"></i>Sign Out</a></li>
             </ul>
         </nav>
     </div>
@@ -67,9 +63,7 @@
                 <nav class="templatemo-top-nav col-lg-12 col-md-12">
                     <ul class="text-uppercase">
                         <li><a href="" class="active" onclick="display($('#add-form'));return false">添加植物</a></li>
-                        <li><a href="" onclick="enableSetting(this);return false;">显示操作</a></li>
-                        <li><a href="">Overview</a></li>
-                        <li><a href="login.html">Sign in form</a></li>
+                        <li><a href="" onclick="enableSetting(this);return false;">关闭操作</a></li>
                     </ul>
                 </nav>
             </div>
@@ -132,7 +126,7 @@
                                     <td>植物类型</td>
                                     <td>成本价</td>
                                     <td>植物图片</td>
-                                    <td class="setting" hidden>操作</td>
+                                    <td class="setting">操作</td>
                                 </tr>
                                 </thead>
                                 <tbody id="plant-table">
