--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -241,11 +241,11 @@
                 processData: false,
                 success:function(data){
                     alert("添加成功");
-                    clear();
+                    clear(1,10);
                 },
                 error:function(data) {
                     alert(data);
-                    clear();
+                    clear(1,10);
                 }
             });
 //        };
